github-actions-runner/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garm-webhook-external
  namespace: github-actions-runner
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - garm.shion1305.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhooks
      backendRefs:
        - name: garm-server
          port: 9997
