github-actions-runner/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garm-internal
  namespace: github-actions-runner
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - garm.i.shion1305.com
  rules:
    - backendRefs:
        - name: garm-server
          port: 9997
